2007-06-21  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Added a package icon to both packages
	  columns.
	* Project/CProjectBinding.cs, Project/CProject.cs: Implemented
	  CreateSingleFileProject

2007-06-20  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Project/CProject.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs, Compiler/GNUCompiler.cs:
	  Fixed a few bugs.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Fixed bug where only projects that had a binary
	  target got correctly cleaned.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/ProjectPackagesFolderNodeBuilder.cs: Changed the package
	  added/removed handlers to just call UpdateAll from the builder.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/ProjectPackagesFolderNodeBuilder.cs: Changed the node builder so
	  that it registeres even handlers correctly
	* Project/ProjectPackageCollection.cs, Project/CProject.cs: Removed the
	  SetProject method and replaced it with and internal get/set
	  property.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: CProject does want it's tags written.

2007-06-18  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs: Changed to
	  accomodate the new CTagsCompletion design.

2007-06-17  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Added debug information creation for the
	  Debug configuration and fixed bug where the target output was not
	  buing built when it should be.

2007-06-17  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/CodeGenerationPanel.cs, Project/CCompilationParameters.cs,
	  Project/CProject.cs, Compiler/GNUCompiler.cs: The extra compiler
	  and extra linker options is now shown is an TextView in the code